--- a/style.css
+++ b/style.css
@@ -19,32 +19,31 @@ html {
 }
 
 body {
-  min-block-size: 100vb;
   background-size: cover;
   background-color: var(--primary_dark);
   color: var(--primary_light);
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 1.5rem;
+  font-family: "Roboto", sans-serif;
+  font-size: clamp(1rem, 1vw + 1rem, 1.5rem);
 }
 
 h1 {
-  font-size: 2.5rem;
-  font-weight: 500;
+  font-size: clamp(2rem, 2vw + 1rem, 2.5rem);
+  font-weight: 600;
 }
 
 h2 {
-  font-size: 2rem;
-  font-weight: 400;
+  font-size: clamp(1.5rem, 1.5vw + 1rem, 2rem);
+  font-weight: 500;
 }
 
 h3 {
-  font-size: 1.75rem;
-  font-weight: 300;
+  font-size: clamp(1.25rem, 1.25vw + 1rem, 1.75rem);
+  font-weight: 500;
 }
 
 h4 {
-  font-size: 1.75rem;
-  font-weight: 100;
+  font-size: clamp(1.25rem, 1.25vw+ 1rem, 1.75rem);
+  font-weight: 400;
 }
 
 p {
@@ -186,8 +185,6 @@ nav a:hover::after {
   padding: 1.5rem 4rem;
   justify-content: space-around;
   align-items: center;
-  width: 80%;
-  margin: 0 auto;
 }
 
 .header_image {
@@ -493,9 +490,73 @@ h3.centered {
   right: 0;
 }
 
+.projects_sector h3 {
+  background: var(--secondary_dark);
+}
+
+.project_card_container {
+  background: var(--secondary_dark);
+  padding: 1.5rem 4rem;
+  display: flex;
+  justify-content: space-around;
+  gap: 2rem;
+}
+
+.project_card {
+  background: var(--primary_dark);
+  padding: 1.5rem 2rem;
+  width: min(50%, 500px);
+  border-radius: 1rem;
+  box-shadow: 2px 2px 4px black;
+  position: relative;
+}
+
+.project_card_container > div > img {
+  border-radius: 1rem 1rem 0 0;
+  position: relative;
+  display: inline-block;
+  mask-image: linear-gradient(
+    to top,
+    rgba(0, 0, 0, 0) 0%,
+    rgba(0, 0, 0, 0.65) 100%
+  );
+}
+
+.project_card_container > div > img ::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  display: inline-block;
+}
+
+.tags_container {
+  display: flex;
+  justify-content: flex-start;
+  padding-top: 1rem;
+  font-size: clamp(1rem, 1vw+ 1rem, 1.75rem);
+  font-weight: 100;
+}
+
+.tag {
+  border-radius: 2rem;
+  padding: 0.5rem 1rem;
+  border: 2px solid var(--primary_ascend);
+  box-shadow: 2px 2px 4px black;
+  scale: 0.7;
+}
+
+.project_link {
+  position: absolute;
+  scale: 0.8;
+  top: 1.5rem;
+  right: 2rem;
+}
+
 .contact_sector,
 .hobbies_sector {
-  background: var(--secondary_dark);
   text-align: center;
 }
 
@@ -517,6 +578,7 @@ h3.centered {
 }
 
 footer {
+  background: var(--secondary_dark);
   padding: 2rem 5rem;
 }
 
@@ -537,28 +599,7 @@ p span {
 }
 
 @media screen and (max-width: 650px) {
-  h1 {
-    font-size: 2rem;
-    font-weight: 500;
-  }
-
-  h2 {
-    font-size: 1.5rem;
-    font-weight: 400;
-  }
-
-  h3 {
-    font-size: 1.25rem;
-    font-weight: 300;
-  }
-
-  h4 {
-    font-size: 1.25rem;
-    font-weight: 100;
-  }
-
   body {
-    font-size: 1rem;
     line-height: 1.9rem;
   }
 
@@ -592,6 +633,14 @@ p span {
   .typewriter_container ul {
     height: 1.5rem;
     margin-bottom: 1rem;
+  }
+
+  .project_card_container {
+    padding: 1.5rem 2rem;
+  }
+
+  .project_card {
+    width: 100%;
   }
 
   .contact_container,
