--- a/style.css
+++ b/style.css
@@ -532,6 +532,7 @@ h3.centered {
   justify-content: flex-start;
   flex-wrap: wrap;
   padding-top: 1rem;
+  gap: 0.5rem;
   font-size: clamp(1rem, 1vw+ 1rem, 1.75rem);
   font-weight: 100;
 }
