--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ p {
 nav {
   display: flex;
   align-items: center;
-  padding: 1.5rem 5rem;
+  padding: 1rem 5rem;
   position: sticky;
   top: 0;
   background-color: transparent;
@@ -80,7 +80,7 @@ nav a:visited {
   color: var(--primary_light);
 }
 
-nav a::after {
+.nav_menu a::after {
   content: "";
   position: absolute;
   bottom: 0;
@@ -531,8 +531,8 @@ h3.centered {
   display: flex;
   justify-content: flex-start;
   flex-wrap: wrap;
-  padding-top: 1rem;
   gap: 0.5rem;
+  padding-top: 1rem;
   font-size: clamp(1rem, 1vw+ 1rem, 1.75rem);
   font-weight: 100;
 }
@@ -738,7 +738,7 @@ p span {
 
 @media screen and (max-width: 900px) {
   nav {
-    padding: 1.5rem 3rem;
+    padding: 1rem 3rem;
   }
 
   .nav_menu {
@@ -768,7 +768,7 @@ p span {
   }
 
   .hamburger {
-    top: 2rem;
+    top: 45%;
     right: 2rem;
   }
 
@@ -804,7 +804,7 @@ p span {
   .description_container {
     padding: 1.5rem 4rem;
   }
-  
+
   .project_card {
     margin: 0 auto;
   }
